---------------------------
  Jackdmp changes log
---------------------------

2006-09-13  Stephane Letz  <letz@grame.fr>

	* Correct pipe destruction bug in JackWinNamedPipe class.

2006-09-11  Stephane Letz  <letz@grame.fr>

	* Handling of LoopBack driver only when really needed.
	* Correct crash bug when closing clients on Windows due to multi-threading synchronization issues.

2006-09-06  Stephane Letz  <letz@grame.fr>

	* Correct coreaudio driver (input was not working since 0.55 version).

2006-09-04  Stephane Letz  <letz@grame.fr>

	* Correct Windows VC++ projects.

2006-09-03  Stephane Letz  <letz@grame.fr>

	* First import of version 0.58 code