@@ -2,6 +2,10 @@
   Jackdmp changes log
 ---------------------------
 
+2006-09-15  Stephane Letz  <letz@grame.fr>
+
+	* On Windows version, use signal to quit the server.
+
 2006-09-13  Stephane Letz  <letz@grame.fr>
 
 	* Correct pipe destruction bug in JackWinNamedPipe class.
